--- a/RNN_numpy.ipynb
+++ b/RNN_numpy.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##function for dataset creation\n",
     "def data():\n",
     "    inputs = np.random.randint(0, 9, 10)\n",
     "    targets = np.sort(inputs)\n",
